@@ -1,3 +1,9 @@
+2008-08-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* inf-haskell.el (inferior-haskell-load-file): Escape backslashes (and
+	quotes) in file names passed to the inferior process.
+	Reported by "Nadeem Abdul Hamid" <nadeem@acm.org>.
+
 2008-07-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-load-and-run): Don't run if there
